--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Freitas Barber</title>
+    <title>Teste</title>
     <meta name="title" content="Freitas Barber">
-    <meta name="description" content="A sua Barbearia em Piçarras, SC">
-    <meta name="keywords" content="Barbearia, Salao, Cabeleireiro, Picarras, Corte de cabelo">
-    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets\css\app.css"> </head>
 
 <body>
@@ -397,7 +394,7 @@
         <div id="nous-suivre" class="section social">
             <div class="container">
                 <h2 class="section-title">Estilos de corte</h2>
-                <p class="section-subtitle"> Vous voulez suivre notre actualité, être au courant de tous nos événements, soirées, concerts&nbsp;? ...
+                <p class="section-subtitle"> Vous  notre actualité, être au courant de tous nos événements, soirées, concerts&nbsp;? ...
                     <br> Rien de plus simple&nbsp;! Abonnez-vous à nos pages Facebook et Instagram&nbsp;;) </p>
                 <div class="social-wall-wrapper swiper-container">
                     <div class="social-wall swiper-wrapper">
