--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -77,8 +77,8 @@
                         <!-- <img class="built-lockup" src="assets\img\contents\hero-logo.png" alt="Built where we live" style="top: 0px;"> -->
                         <div class="text" style="opacity: 1;">
                             <div class="line-wrap pad-top"><span class="top-line" style="width: 640px;"></span></div>
-                            <h4 class="light-txt" style="letter-spacing: 2px;">Furniture that lasts.</h4>
-                            <h4 class="light-txt" style="letter-spacing: 2px;">Builders that listen.</h4>
+                            <h4 class="light-txt" style="letter-spacing: 2px;">O que ser isso</h4>
+                            <h4 class="light-txt" style="letter-spacing: 2px;">asd sad listen.</h4>
                             <h4 class="light-txt" style="letter-spacing: 2px;">Design that serves.</h4>
                             <h4 class="light-txt" style="letter-spacing: 2px;">Come meet Project Sunday.</h4>
                             <div class="line-wrap"><span class="bottom-line" style="width: 640px;"></span></div>
