added robots and noindex meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <meta charset="utf-8">
+  <meta NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="yes" name="apple-mobile-web-app-capable">
