--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="cont__inn">
     <div class="cont__content">
       <div class="head__cont">
-        <a class="head__logo" href="#"><img alt="Barbearia Freitas Barber" src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/c70555f5-30d7-452c-aef3-43d1b48582b7/logo.svg?AWSAccessKeyId=AKIAJLJXUMP5IHUZAPFQ&Expires=1539797331&Signature=KOnApMczPy%2FZlT4aMZNuLY0GirY%3D"></a>
+        <a class="head__logo" href="#"><img alt="Barbearia Freitas Barber" src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/c70555f5-30d7-452c-aef3-43d1b48582b7/logo.svg?AWSAccessKeyId=AKIAJLJXUMP5IHUZAPFQ&Expires=1540133982&Signature=1MFyDcEO4zr19CaNyDGwKWwWygM%3D"></a>
       </div>
       <div class="content__cont">
        
@@ -36,19 +36,20 @@
     <div class="hero-contacts-wrapper">
       <div class="wrapper left side-paddings">
         <div class="hero-contacts">
-          <div class="hero-contact"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5ac89367e4871d2e7464974a_workshop-icon-color.svg"
+          <div class="hero-contact">
+            <img src="https://www.notion.so/signed/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F1a3777fc-0de6-439a-8a1e-1bc2a1bfb25d%2Fclock(1).svg"
               alt="" class="hero-contact-icon">
             <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
             <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
             <div class="hero-contact-live">ABERTO AGORA!</div>
           </div>
-          <div class="hero-contact"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5ac8936699758e27b71e2957_location-icon-color.svg"
+          <div class="hero-contact"><img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/936bf620-2ad5-49bd-9305-738eec10bd9c/location-pin%281%29.svg?AWSAccessKeyId=AKIAJLJXUMP5IHUZAPFQ&Expires=1540139717&Signature=ym51ONWuqWI9Qh%2FSyXXbDk891N0%3D"
               alt="" class="hero-contact-icon">
               <div class="hero-contact-title">Rua Tijucas, 140</div>
             <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
             <div class="hero-contact-live">VER NO MAPA</div>
           </div>
-          <div class="hero-contact"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5ac893662c10d190d1435ccd_contacts-icon-color.svg"
+          <div class="hero-contact"><img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/32cbb411-23c1-4ebb-8ea3-1eaa626128ec/telephone.svg?AWSAccessKeyId=AKIAJLJXUMP5IHUZAPFQ&Expires=1540141133&Signature=or4u8neu1VR6VzEEchO%2B3tewhbg%3D"
               alt="" class="hero-contact-icon">
             <div>47 999774748:<br><a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a></div>
             <a href="https://facebook.com" target="_blank" class="hero-social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
@@ -118,7 +119,7 @@
                 Just set it up last week and already found a ton of bugs and things to improve. Telling my friends!</span><span
                 class="quote__date">11 May 2017</span></a>
             <a class="quote__card" href="https://twitter.com//status/" target="_blank"><span
-                class="quote__img" style="background-image: url('profile_images//.png');"></span><span
+                class="quote__img" style="background-image: var(--default-img);"></span><span
                 class="quote__user">@maggiecrowley</span><span class="quote__text">New Saturday morning: ☕️ + watching
                 the latest magic sent my way by the brilliant <span class="quote__text__anchor">@fullstory</span></span><span
                 class="quote__date">18 Mar 2017</span></a>
@@ -133,7 +134,7 @@
                 they work. I have <span class="quote__text__anchor">@fullstory</span> auto-playing on a second monitor.</span><span
                 class="quote__date">07 Feb 2017</span></a>
             <a class="quote__card" href="https://twitter.com//status/" target="_blank"><span
-                class="quote__img" style="background-image: url('profile_images//.png');"></span><span
+                class="quote__img" style="background-image: var(--default-img);"></span><span
                 class="quote__user">@LukePeerFly</span><span class="quote__text">I've been testing out <span class="quote__text__anchor">@FullStory</span>
                 with their free trial and it is absolutely amazing application. One of the best user experiences I've
                 had.</span><span class="quote__date">30 Jan 2017</span></a>
@@ -171,11 +172,16 @@
                 With FullStory, we can move at 4x the speed we used to.</span><span class="quote__date">Kayako</span></a>
           </div>
           <div class="quote__cont__col">
-            <a class="quote__card" href="https://twitter.com/mikolajdobrucki/status/973348414414114816" target="_blank"><span
-                class="quote__img" style="background-image: url('profile_images/994465007235686400/vzP4zczL_normal.jpeg');"></span><span
-                class="quote__user">@mikolajdobrucki</span><span class="quote__text">Just started using <span class="quote__text__anchor">@fullstory</span>
-                for <span class="quote__text__anchor">#ux</span> <span class="quote__text__anchor">#testing</span> and
-                I'm REALLY amazed by its features. Great work, guys! 👏🏼👏🏼👏🏼</span><span class="quote__date">13
+            <a class="quote__card" 
+            href="https://twitter.com/mikolajdobrucki/status/973348414414114816" target="_blank"><span
+                class="quote__img" 
+                style="background-image: url('profile_images/994465007235686400/vzP4zczL_normal.jpeg');"></span><span
+                class="quote__user">@mikolajdobrucki</span><span 
+                class="quote__text">Just started using <span 
+                class="quote__text__anchor">@fullstory</span>
+                for <span class="quote__text__anchor">#ux</span> <span 
+                class="quote__text__anchor">#testing</span> and I'm REALLY amazed by its features. Great work, guys! 👏🏼👏🏼👏🏼</span><span 
+                class="quote__date">13
                 Mar 2018</span></a>
             <a class="quote__card" href="https://twitter.com/petezimek/status/968339227879661568" target="_blank"><span
                 class="quote__img" style="background-image: url('profile_images/677958238713700352/sddNHA7Y_normal.jpeg');"></span><span
