Criado elemento de imagem card

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <div class="cont__content">
       <div class="head__cont">
         <a class="head__logo" href="#"><img alt="Barbearia Freitas Barber" src="img/logo-white.png">
-        </a>  
+        </a>
       </div>
       <div class="content__cont">
         <h1 class="content__header"> A sua melhor imagem<br>começa aqui. </h1>
         <p class="content__text"> Pronto para lidar com suas maiores expectativas. Procura excelente qualidade? Preço
           Justo? Então encontrou! </p>
         <div class="content__btns">
-          <a class="btn btn--regular btn--gradient btn--rounded" href="pricing-1.html"><span class="btn--gradient__text">Chamar
-              no whats</span></a><a class="btn btn--regular btn--underline btn--text" href="features-1.html"> Ou no
-            messenger</a>
+          <a class="btn btn--regular btn--gradient btn--rounded" href="pricing-1.html"><span class="btn--gradient__text"><img
+                src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+                alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text"
+            href="features-1.html"> Ou  <img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+              alt="" class="hero-social-icon">messenger</a>
         </div>
       </div>
     </div>
@@ -56,9 +58,8 @@
             <div>47 999774748:<br>
               <a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a><br>
               <a href="https://facebook.com/freitasbarber" class="social-link-color"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
-                alt="" class="hero-social-icon">Facebook</a>
+                  alt="" class="hero-social-icon">Facebook</a>
             </div>
-            
           </div>
           <!-- <a href="#About" class="hero-scroll-link w-inline-block">
             <div>Scroll</div><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a76b7a84323220001d70a4a_arrow-right-icon.svg"
@@ -88,6 +89,7 @@
           <div class="quote__cont__col">
             <a class="quote__card" href="#" target="_blank">
               <span class="quote__img" style="background-image: var(--default-img);"></span>
+              <span class="quote__image"> <img class="quote__image--img" alt="Barbearia Freitas Barber" src="img/logo-white.png"></span>
               <span class="quote__user">@usuariodeteste </span>
               <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
                 <span class="quote__text__anchor">#tags</span>
