--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <p class="content__text"> Pronto para lidar com suas maiores expectativas. Procura excelente qualidade? Preço
           Justo? Então encontrou! </p>
         <div class="content__btns">
-          <a class="btn btn--regular btn--gradient btn--rounded" href="pricing-1.html"><span class="btn--gradient__text"><img
-                src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+          <a class="btn btn--regular btn--gradient btn--rounded" href="#"><span class="btn--gradient__text"><img
+                src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text"
-            href="features-1.html"> Ou  <img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+            href="features-1.html"> Ou  <img src="img/messenger.svg"
               alt="" class="hero-social-icon">messenger</a>
         </div>
       </div>
