--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="btn btn--regular btn--gradient btn--rounded" href="#"><span class="btn--gradient__text"><img
                 src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text"
-            href="features-1.html"> Ou  <img src="img/messenger.svg"
+            href="#"> Ou  <img src="img/messenger.svg"
               alt="" class="hero-social-icon">messenger</a>
         </div>
       </div>
@@ -41,30 +41,39 @@
       <div class="wrapper left side-paddings">
         <div class="hero-contacts">
           <div class="hero-contact">
-            <img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/97eca6a0-3d18-44b0-8f98-c23ccd5d3dad/clock.svg?AWSAccessKeyId=ASIAT73L2G45F74AYD5X&Expires=1540664678&Signature=WJq87f3WeydV%2F6DkFfZMqzns1K0%3D&x-amz-security-token=FQoGZXIvYXdzEDMaDITVXRnrLsy7ecrBCCK3AwgXXj5vTFwWq5nsuzQM%2BSHDOLIF8U4ooOk6oZ2B54ORZHNg%2B1PEQmXaUJhKc0VoN5CKAAXEaFhEDfgUV1VIyVppBzgRng5gv1X%2FHGlcXpvLEVfCLrOkkTiIshzscvdymG9f%2FytuMPRf%2F0f%2FjmFrAbWgfW3T%2BVjFHSnWa3pG%2BRR33GmzJ58zfgKf%2BGenJQzABdFZdnEXGCf%2BLBha1taNZzSZ%2BNsyloecSaxyxl6UmnVvPXD1o%2BvYioWDyPzc%2FiGAfHksyP9hAOrTmztdPb%2BzB5pLtBrNhTXbqAHoIee67IcUrN2QIv8EovjnoeEsddxT6D%2FCB2UHK0nVg7Wce%2B21D4eiJK7psXHg%2FGW%2BfBvfn7smXqzfttyBT5fOidSbjcbpa0Tbw7K%2BXvlLDUlAi9D5yGLM6om0hTSet6kigRff8R2mmbeGbg9cMbd04I0aD%2BTqD7rmb3CwnfsmIjWDc%2BjbTJFTItPfEz7J1K%2Fzw6O%2FVT63qoBz%2BYX4sgnYyzwGvPsfY54SMxfcr4nok2mOvfzXqazkgD6gXH6qkZx3RSYg18BzJpd6lgx%2FHO4LcxHrcu%2FTXjmPXPLApTsoxJ%2FN3gU%3D"
+            <img src="img/icon-clock.svg"
               alt="" class="hero-contact-icon">
-            <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
-            <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
-            <div class="hero-contact-live">ABERTO AGORA!</div>
+              <div>
+                <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
+                <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
+                <div class="hero-contact-live">ABERTO AGORA!</div>
+
+              </div>
+
           </div>
-          <div class="hero-contact"><img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/936bf620-2ad5-49bd-9305-738eec10bd9c/location-pin%281%29.svg?AWSAccessKeyId=ASIAT73L2G45DEWQI6PK&Expires=1540664727&Signature=umsvFa9mFGMkhA4B2YE8OBXqr08%3D&x-amz-security-token=FQoGZXIvYXdzEDMaDOB17O0Oo3sne3G4ZiK3A%2Fhv6CqksyAEHTIrgPjc3APKdOVC5UyjxaocdPIKAXFVEynX4j8HoKOAiVEO279tvxE4f8ODX0wwi97i9%2B20nMM2AVvQksFr5C%2BwrgZrLD7x32%2FedIOCxKszuY8ziONMhtzMQvuGQdRNPu7QKyryhiltZTCzU1soG1Fi0BGc1xBT3f7tUk3AOYQsp3zHff1KXFbmE1t8ty%2FaKasw8lFAaRd6cKwIdyiT8sFUzgWMJXwVfcVbO7j%2FM1gxHIar6sS6Eq4%2FpK55HukaMsEHgkAmTQ6xuun2tXaBqHTn6DWYkhtn4ZxYcgecU84MhM87ztFdqrnvmWR4o0QWjDd4h13TT8qUaA%2BbNjSgpoLkd1eLcTe1NM%2FDnKZTy%2BnfsIrAjjVWwAkX%2F8qVCERG0gAA9uZBGvZyMcvRBSmXzyLojH78iW8q%2B9Px0mpzClUtj0E2lFbGBNY4Hn4u6HfVOnN6ziXeHdQd25Oa4cOBH44FoDls2vZRl4PK1HFf8dgq91CutHibyyVCPThOc2gNgBP6SF4tLcG1TqvImcvPkxd8yreLbWhKcVlkZta5jJJs%2FuKhVXZLLlBl3jIv0ZQoj6jN3gU%3D"
+          <div class="hero-contact"><img src="img/icon-location.svg"
               alt="" class="hero-contact-icon">
-            <div class="hero-contact-title">Rua Tijucas, 140</div>
-            <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
-            <div class="hero-contact-live">VER NO MAPA</div>
+              <div>
+                <div class="hero-contact-title">Rua Tijucas, 140</div>
+                <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
+                <div class="hero-contact-live">VER NO MAPA</div>
+
+              </div>
+
           </div>
-          <div class="hero-contact"><img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b1d240d4-967c-4434-9b1a-5bcc52728074/speech-bubble.svg?AWSAccessKeyId=ASIAT73L2G45FWY2OBEF&Expires=1540664911&Signature=rK5NDbtn6%2FYKwL4XPmNlJiPoFNw%3D&x-amz-security-token=FQoGZXIvYXdzEDMaDMp8uOjMCE%2Fiam0oliK3A21GcnISq3%2Bd8HsPubyZuOnx9Y6ryZlEKZOgB1eJ4Myc8v3LFmZtTVQLXHqy5bnRABVubIM0caIp%2Bqh3t02LVh%2FHn6UPZu%2Fkn2360gkjUmkrLOcocbLfHJnSWnyd1ldf5XC1ENca0I83kNdgyC2wa8Qb37gP7EhnyXhBLSA9RnfwjhOwU24tqALkEe%2FmVNIKzfK6MoODwO55amDfl4eS2ibLe7kp4TQxOi136l5cx8RBL0YEhjw8DKxRhOdHGqRCQ2GyPpt8FeH8pexwOZuULz7HT%2FxM8sMaPMYPJnpJNmSer0pDsPHVK8jx3KOqsko%2BKEREpl92I5qqYIK%2BQysytwB5O0cj%2FZaU5rV2X%2BkYYuYzryB%2Bim%2Fyr1JeLrkpiYqGawO6jz7MLCw0tATaNgFphqo33XcDwqEpCGn3I2GP342kYhJL4uEncnU8RKyhnrmWHajCTo%2BtdkuTaCmIa64jEmevVoWk5CJE9UB4j6OZXERs4loIVgr2KwRUbB4BsdNH2ORHkMcEFPu4pK%2BC%2BeicAgDc9cUkzfFqHsNRZo8GyrX3GPz3r5KBXakByMbCKUDqT9rJcIPbQWIos6nN3gU%3D"
+          <div class="hero-contact"><img src="img/icon-contato..svg"
               alt="" class="hero-contact-icon">
-            <div>47 999774748:<br>
-              <a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a><br>
-              <a href="https://facebook.com/freitasbarber" class="social-link-color"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
-                  alt="" class="hero-social-icon">Facebook</a>
-            </div>
+              <div>
+                <div class="hero-contact-title">47 999774748</div>
+                <div class="hero-contact-link"><a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a></div>
+                <div class="hero-contact-live"><a href="https://facebook.com/freitasbarber" class="social-link-color"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+                  alt="" class="hero-social-icon">Facebook</a></div>
+
+              </div>
+          
           </div>
-          <!-- <a href="#About" class="hero-scroll-link w-inline-block">
-            <div>Scroll</div><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a76b7a84323220001d70a4a_arrow-right-icon.svg"
-              alt="" class="scroll-down-icon">
-          </a> -->
+ 
+          </a> 
         </div>
       </div>
       <div class="hero-contacts-bg"></div>
