--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <title>Barbearia | Freitas Barber</title>
   <link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Rye:400|Zilla+Slab:600|Lato:400" rel="stylesheet" />
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+  <script type="text/javascript" src='assets/js/sheetsee.js'></script>
 </head>
 
 <body class="cont fbr fbr_index" ontouchstart="">
@@ -77,119 +79,13 @@
         </div>
       </div>
       <div class="hero-contacts-bg"></div>
-      <!-- <div class="hero-social">
-        <a href="https://twitter.com" target="_blank" class="hero-social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcd7bd20a000183b8d9_twitter-icon-white.svg"
-            alt="" class="hero-social-icon">
-          <div class="hero-social-text">Twitter</div>
-        </a>
-        <a href="https://facebook.com" target="_blank" class="hero-social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
-            alt="" class="hero-social-icon">
-          <div class="hero-social-text">Facebook</div>
-        </a>
-        <a href="https://youtube.com" target="_blank" class="hero-social-link no-border w-inline-block"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcd513ec40001b66044_youtube-icon-white.svg"
-            alt="" class="hero-social-icon">
-          <div class="hero-social-text">YouTube</div>
-        </a>
-      </div> -->
+    
     </div>
     <div class="quote__cont">
       <div class="quote__cont__inn" id="quotesScroll">
         <div class="quote__cont__inn__row">
           <div class="quote__cont__col">
-            <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__image"> <img class="quote__image--img" alt="Barbearia Freitas Barber" src="img/logo-white.png"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a>
-            <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a>
+            <div id="fullTable">Carregando...</div>
           </div>
           <div class="quote__cont__col">
             <a class="quote__card" href="#" target="_blank">
@@ -304,7 +200,46 @@
     </div>
   </div>
   </div>
+  <script id="fullTable_template" type="text/html">
+    {{#rows}}
+        <a class="quote__card" href="#" target="_blank">
+          <span class="quote__img" style="background-image: url('{{FotoUsuario}}'),var(--default-img);"></span>
+          <span class="quote__image"> <img class="quote__image--img" alt="Barbearia Freitas Barber" src="{{FotoBarbearia}}"></span>
+          <span class="quote__user">{{NomeOuUsuario}}</span>
+          <span class="quote__text">{{Comentario}}<span class="quote__text__anchor">{{Tag1}}</span>
+            <span class="quote__text__anchor">{{Tag2}}</span>
+          <span class="quote__date">{{Data}}</span>
+          <span class="quote__rating" rating="{{Rating}}">avaliacao</span>
+        </a>
+        {{/rows}}
+  </script>
+  <div style="display: none">
+    <input id="fullTableFilter" type="text" placeholder="filtrar por..."></input>
+    <a class="clear">Clear</a>
+  </div>
+  
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function () {
+      var URL = "1p7ilzd-_ZrnF3J6zPrfVvhnCs1My63RwO88nMdfHLsQ"
+      Tabletop.init({
+        key: URL,
+        callback: showInfo,
+        simpleSheet: true
+      })
+    })
+
+    function showInfo(data) {
+      var tableOptions = {
+        "data": data,
+        // "pagination": 10,
+        "tableDiv": "#fullTable",
+        "filterDiv": "#fullTableFilter"
+      }
+      Sheetsee.makeTable(tableOptions)
+      Sheetsee.initiateTableFilter(tableOptions)
+    }
+  </script>
   <script type="text/javascript">
     function AutoDivScroll(elemId, speed, step, plane, options) {
       (this.elem = null),
@@ -391,6 +326,7 @@
     }
     new AutoDivScroll("quotesScroll", "20", "1", "1");
   </script>
+  
 </body>
 
 </html>
