--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 </head>
 
 <body class="cont fbr fbr_index" ontouchstart="">
+  <div id="fb-root"></div>
+  <script>
+    (function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src =
+      'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=1727262127341833&autoLogAppEvents=1';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
   <div class="cont--gradient"></div>
   <div class="cont__inn">
     <div class="cont__content">
@@ -31,55 +43,47 @@
         <p class="content__text"> Pronto para lidar com suas maiores expectativas. Procura excelente qualidade? Preço
           Justo? Então encontrou! </p>
         <div class="content__btns">
-          <a class="btn btn--regular btn--gradient btn--rounded" href="#"><span class="btn--gradient__text"><img
-                src="img/whatsapp.svg"
+          <a class="btn btn--regular btn--gradient btn--rounded" href="#"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text"
-            href="#"> Ou  <img src="img/messenger.svg"
-              alt="" class="hero-social-icon">messenger</a>
+            href="#"> Ou <img src="img/messenger.svg" alt="" class="hero-social-icon">messenger</a>
         </div>
+        <div class="fb-like" data-href="https://www.facebook.com/freitasbarber1977/" data-layout="button" data-action="like"
+          data-size="large" data-show-faces="false" data-share="true"></div>
       </div>
     </div>
     <div class="hero-contacts-wrapper">
       <div class="wrapper left side-paddings">
         <div class="hero-contacts">
           <div class="hero-contact">
-            <img src="img/icon-clock.svg"
-              alt="" class="hero-contact-icon">
-              <div>
-                <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
-                <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
-                <div class="hero-contact-live">ABERTO AGORA!</div>
-
-              </div>
-
+            <img src="img/icon-clock.svg" alt="" class="hero-contact-icon">
+            <div>
+              <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
+              <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
+              <div class="hero-contact-live">ABERTO AGORA!</div>
+            </div>
           </div>
-          <div class="hero-contact"><img src="img/icon-location.svg"
-              alt="" class="hero-contact-icon">
-              <div>
-                <div class="hero-contact-title">Rua Tijucas, 140</div>
-                <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
+          <div class="hero-contact"><img src="img/icon-location.svg" alt="" class="hero-contact-icon">
+            <div>
+              <div class="hero-contact-title">Rua Tijucas, 140</div>
+              <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
+              <a target="_blank" href="https://www.google.com.br/maps/place/Barbearia+FREITAS+BARBER/@-26.7755232,-48.6727507,15z/data=!4m2!3m1!1s0x0:0xea12f3d326cb2c5?ved=2ahUKEwiWp7Kx8szeAhXJgZAKHaPnCVcQ_BIwMXoECAUQCA">
                 <div class="hero-contact-live">VER NO MAPA</div>
-
-              </div>
-
+              </a>
+            </div>
           </div>
-          <div class="hero-contact"><img src="img/icon-contato..svg"
-              alt="" class="hero-contact-icon">
-              <div>
-                <div class="hero-contact-title">47 999774748</div>
-                <div class="hero-contact-link"><a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a></div>
-                <div class="hero-contact-live"><a href="https://facebook.com/freitasbarber" class="social-link-color"><img src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
-                  alt="" class="hero-social-icon">Facebook</a></div>
-
-              </div>
-          
+          <div class="hero-contact"><img src="img/icon-contato..svg" alt="" class="hero-contact-icon">
+            <div>
+              <div class="hero-contact-title">47 999774748</div>
+              <div class="hero-contact-link"><a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a></div>
+              <div class="hero-contact-live"><a href="https://facebook.com/freitasbarber" class="social-link-color"><img
+                    src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
+                    alt="" class="hero-social-icon">Facebook</a></div>
+            </div>
           </div>
- 
-          </a> 
+          </a>
         </div>
       </div>
       <div class="hero-contacts-bg"></div>
-    
     </div>
     <div class="quote__cont">
       <div class="quote__cont__inn" id="quotesScroll">
@@ -217,7 +221,6 @@
     <input id="fullTableFilter" type="text" placeholder="filtrar por..."></input>
     <a class="clear">Clear</a>
   </div>
-  
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
@@ -326,7 +329,6 @@
     }
     new AutoDivScroll("quotesScroll", "20", "1", "1");
   </script>
-  
 </body>
 
 </html>
